group "co.nvqa"
version "2.0.0"
apply plugin: "java"

sourceCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
}

dependencies {
    testImplementation project(":commons")
    testImplementation project(":common-selenium")

    testImplementation "ch.qos.logback:logback-classic:1.2.3"

    testImplementation "org.apache.poi:poi-ooxml:4.1.0"
}

project.ext {
    defaultScenarioManager = "co.nvqa.operator_v2.cucumber.glue.ScenarioManager"
    cucumberGluePackage = ["co.nvqa.operator_v2.cucumber.glue", "classpath:co.nvqa.commons.cucumber.glue", "classpath:co.nvqa.common_selenium.cucumber.glue"]
}

apply from: "commons/build-commons.gradle"
